// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aliases request by address should return correct data if requested with showBroken 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "carl",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "lmao",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "ubiq",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "payments",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "wings",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "matt",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "jonathan",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "platinum",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "silver",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "cobalt",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "hydrogen",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "zinc",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "swift",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rnsd",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "happy",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "flux",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "abram",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "fortuna",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "gamb",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "first",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "fortune",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "national",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "haha",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "whenmoon",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "music",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "gaming",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rubles",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "dollars",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rail",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "surf",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "homo",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "noah",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "emma",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "emily",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "peace",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "vitamin",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "whalepool",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "eternal",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "tsunami",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rocket",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "solid",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": null,
        "alias": "scam",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "hack",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "when",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "nudes",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "email",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "mail",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "messi",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "star",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "allah",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "jesus",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "banker",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "flight",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "bird",
      },
    },
  ],
}
`;

exports[`Aliases request by address should return correct data if requested without showBroken 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "carl",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "lmao",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "ubiq",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "payments",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "wings",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "matt",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "jonathan",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "platinum",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "silver",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "cobalt",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "hydrogen",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "zinc",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "swift",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rnsd",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "happy",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "flux",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "abram",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "fortuna",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "gamb",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "first",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "fortune",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "national",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "haha",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "whenmoon",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "music",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "gaming",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rubles",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "dollars",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rail",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "surf",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "homo",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "noah",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "emma",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "emily",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "peace",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "vitamin",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "whalepool",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "eternal",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "tsunami",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "rocket",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "solid",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "hack",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "when",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "nudes",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "email",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "mail",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "messi",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "star",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "allah",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "jesus",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "banker",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "flight",
      },
    },
    Object {
      "__type": "alias",
      "data": Object {
        "address": "3PNdBybMvsymPyLH4j8ZMTfFQkwPFka8fsN",
        "alias": "bird",
      },
    },
  ],
}
`;

exports[`Aliases request by alias should return Maybe(alias) for one correctly 1`] = `
Object {
  "__type": "alias",
  "data": Object {
    "address": "3PQqCXNPoTRsHRK2nZyXWENaZwLmxrUZPBi",
    "alias": "sexy-boys",
  },
}
`;
